--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,11 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
-    "react-bootstrap": "^1.4.0"
+    "css-loader": "^5.1.2",
+    "react-bootstrap": "^1.4.0",
+    "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.9.0",
+    "source-map-loader": "^2.0.1",
+    "style-loader": "^2.0.0"
   }
 }
