--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,20 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-async-to-generator": "^7.13.0",
+    "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
+    "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "transform-runtime": "0.0.0",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.13.10",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.3",
     "css-loader": "^5.1.2",
     "react-bootstrap": "^1.4.0",
