--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.5.3",
     "css-loader": "^5.1.2",
     "react-bootstrap": "^1.4.0",
+    "react-confirm-bootstrap": "^5.3.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "reactstrap": "^8.9.0",
